<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/etNombreProyecto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_proyecto" />

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aceptar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:id="@+id/tvExistingProjectsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:text="@string/proyectos_existentes"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvEmptyProjects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="4dp"
        android:text="@string/sin_proyectos"
        android:visibility="gone" />


    <LinearLayout
        android:id="@+id/existingProjectsContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_existing_projects"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="gone">

        <ListView
            android:id="@+id/lvExistingProjects"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="0.5dp"
            android:scrollbars="vertical" />
    </LinearLayout>

</LinearLayout>
