<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/btnNuevoProyecto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:drawableTop="@android:drawable/ic_menu_add"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/nuevo_proyecto"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912" />


    <Button
        android:id="@+id/btnEditarProyecto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:drawableTop="@android:drawable/ic_menu_edit"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/editar_proyecto"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912" />

    <Button
        android:id="@+id/btnBancoEspecies"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:drawableTop="@android:drawable/ic_menu_gallery"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/banco_especies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal"
        app:layout_constraintVertical_bias="0.081" />

    <Button
        android:id="@+id/btnConfiguraciones"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:drawableTop="@android:drawable/ic_menu_manage"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/configuraciones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal"
        app:layout_constraintVertical_bias="0.081" />

</androidx.constraintlayout.widget.ConstraintLayout>

